@startuml Class Diagram - Sales, Returns & Observability (CP4)

!theme plain
skinparam classAttributeIconSize 0
skinparam dpi 120
skinparam classFontSize 10
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #1F2933
skinparam packageBackgroundColor #F5F7FA
skinparam packageBorderColor #9AA5B1
skinparam arrowColor #1F2933
skinparam noteBackgroundColor #FFF3CD
skinparam noteBorderColor #856404

package "Sales & Payments" {
    class User {
        + userID: int
        + username: str
        + email: str
    }

    class Product {
        + productID: int
        + name: str
        + price: decimal
        + stock: int
        + get_discounted_unit_price(): decimal
    }

    class Sale {
        + saleID: int
        + totalAmount: decimal
        + status: str
        + sale_date: datetime
    }

    class SaleItem {
        + saleItemID: int
        + quantity: int
        + subtotal: decimal
    }

    abstract class Payment {
        + paymentID: int
        + amount: decimal
        + status: str
        + authorized(): bool
    }

    class Cash {
        + cash_tendered: decimal
    }

    class Card {
        + card_number: str
        + card_type: str
    }
}

package "Returns & Refunds" {
    class ReturnRequest {
        + returnRequestID: int
        + status: ReturnRequestStatus
        + reason: ReturnReason
        + details: str
        + rma_number: str
        + created_at: datetime
        + updated_at: datetime
    }

    class ReturnItem {
        + returnItemID: int
        + quantity: int
        + condition_report: str
        + requested_refund_amount: decimal
    }

    class ReturnShipment {
        + shipmentID: int
        + carrier: str
        + tracking_number: str
        + shipped_at: datetime
        + received_at: datetime
    }

    class Inspection {
        + inspectionID: int
        + inspected_by: str
        + result: InspectionResult
        + notes: str
        + inspected_at: datetime
    }

    class Refund {
        + refundID: int
        + amount: decimal
        + method: RefundMethod
        + status: RefundStatus
        + processed_at: datetime
    }

    class ReturnPhoto {
        + photoID: int
        + file_path: str
        + uploaded_at: datetime
    }

    class ReturnsService {
        + create_return_request()
        + authorize_return()
        + record_shipment()
        + mark_received()
        + record_inspection()
    }

    class RefundService {
        + initiate_refund()
        + handle_failure()
    }
}

package "CP4 Feature Services" #E8F5E9 {
    class HistoryService {
        + get_order_history(user_id, filters)
        + get_returns_history(user_id, filters)
        + parse_date(date_string)
        + format_order_for_display(sale)
    }

    class LowStockAlertService {
        + check_stock_level(product)
        + get_alert_summary()
        + get_low_stock_products()
        + publish_low_stock_event(product)
    }

    class NotificationService {
        + create_notification(user_id, type, msg)
        + get_notifications(user_id, filters)
        + get_unread_count(user_id)
        + mark_as_read(user_id, notif_id)
        + mark_all_as_read(user_id)
    }

    class FlashSaleService {
        + create_flash_sale(product_id, dates, discount)
        + get_active_flash_sales()
        + get_flash_sale_discount_price(product_id)
        + reserve_flash_sale_item()
        + cleanup_expired_reservations()
    }

    class Notification {
        + id: str
        + user_id: int
        + notification_type: str
        + title: str
        + message: str
        + reference_id: int
        + is_read: bool
        + created_at: datetime
    }

    class FlashSale {
        + flashSaleID: int
        + productID: int
        + title: str
        + discount_percent: decimal
        + start_time: datetime
        + end_time: datetime
        + max_quantity: int
        + status: str
        + is_active(): bool
    }
}

package "Partner (VAR) Catalog Ingest" #FFF3E0 {
    class Partner {
        + partnerID: int
        + name: str
        + api_endpoint: str
        + api_key: str
        + sync_frequency: int
        + last_sync: datetime
        + status: str
    }

    class PartnerAPIKey {
        + keyID: int
        + partnerID: int
        + api_key: str
        + expires_at: datetime
        + is_active: bool
        + last_used: datetime
        + usage_count: int
    }

    class PartnerProduct {
        + partnerProductID: int
        + partnerID: int
        + external_product_id: str
        + productID: int
        + sync_status: str
        + last_synced: datetime
        + sync_data: json
    }

    class PartnerCatalogService {
        + create_partner(name, api_endpoint, sync_freq)
        + authenticate_api_key(api_key)
        + validate_input(data)
        + ingest_csv_file(partner_id, content)
        + ingest_json_file(partner_id, content)
        + sync_partner_catalog(partner_id)
        + start_scheduler(interval)
        + stop_scheduler()
        + get_catalog_statistics()
    }

    class CSVDataAdapter {
        + adapt(data): Dict
        + can_handle(data): bool
    }

    class JSONDataAdapter {
        + adapt(data): Dict
        + can_handle(data): bool
    }

    class XMLDataAdapter {
        + adapt(data): Dict
        + can_handle(data): bool
    }
}

package "Reliability & Observability" {
    class QualityTacticsManager {
        + check_throttling()
        + execute_with_circuit_breaker()
        + queue_order_for_retry()
    	+ get_system_health()
    }

    class CircuitBreakerState {
        + service_name: str
        + state: str
        + failure_count: int
        + next_attempt_time: datetime
    }

    class OrderQueue {
        + queueID: int
        + saleID: int
        + queue_type: str
        + priority: int
        + status: str
    }

    class SystemMetrics {
        + metricID: int
        + metric_name: str
        + metric_value: float
    	+ metric_unit: str
    	+ tags: json
        + timestamp: datetime
    }

    class ObservabilityDashboard {
        + render_admin_dashboard()
        + show_quality_scenarios()
        + show_rma_kpis()
        + show_low_stock_alerts()
    }
}

User ||--o{ Sale : places
Sale ||--o{ SaleItem : contains
Sale ||--o{ Payment : "0..* payments"
Payment <|-- Cash
Payment <|-- Card
Product ||--o{ SaleItem : is_sold_in

Sale ||--o{ ReturnRequest : may_spawn
ReturnRequest ||--o{ ReturnItem : line_items
ReturnRequest ||-- ReturnShipment : logistics
ReturnRequest ||-- Inspection : QA
ReturnRequest ||-- Refund : disposition
ReturnRequest ||--o{ ReturnPhoto : evidence
Refund --> Payment : references_original
ReturnsService ..> ReturnRequest : manages
ReturnsService ..> ReturnItem
ReturnsService ..> ReturnShipment
ReturnsService ..> Inspection
ReturnsService ..> ReturnPhoto
RefundService ..> Refund
RefundService ..> Payment
RefundService ..> ReturnsService : notifies

' CP4 relationships
HistoryService ..> Sale : queries
HistoryService ..> ReturnRequest : queries
LowStockAlertService ..> Product : monitors_stock
NotificationService ..> Notification : manages
FlashSaleService ..> FlashSale : manages
FlashSaleService ..> Product : applies_discount
Product ||--o{ FlashSale : may_have_sale
User ||--o{ Notification : receives
ReturnsService ..> NotificationService : publishes_status_change
LowStockAlertService ..> ObservabilityDashboard : feeds_alerts

' Partner Catalog relationships (CP2 Feature)
Partner ||--o{ PartnerAPIKey : has_keys
Partner ||--o{ PartnerProduct : has_products
PartnerProduct --> Product : maps_to
PartnerCatalogService ..> Partner : manages
PartnerCatalogService ..> PartnerProduct : manages
PartnerCatalogService ..> PartnerAPIKey : authenticates
PartnerCatalogService ..> CSVDataAdapter : uses
PartnerCatalogService ..> JSONDataAdapter : uses
PartnerCatalogService ..> XMLDataAdapter : uses
PartnerCatalogService ..> MessageQueue : publishes_events

QualityTacticsManager --> CircuitBreakerState : persists_state
QualityTacticsManager --> OrderQueue : enqueues
QualityTacticsManager --> SystemMetrics : emits_metrics
ObservabilityDashboard --> SystemMetrics : queries
ObservabilityDashboard --> QualityTacticsManager : surfaces_status
ObservabilityDashboard --> LowStockAlertService : displays_alerts
ReturnsService --> QualityTacticsManager : uses_metrics
RefundService --> QualityTacticsManager : uses_circuit_breaker

note right of ReturnRequest
  RMA lifecycle:
  PENDING_AUTHORIZATION →
  AUTHORIZED → IN_TRANSIT →
  RECEIVED → UNDER_INSPECTION →
  APPROVED/REJECTED → REFUNDED
end note

note right of HistoryService
  CP4 Feature 2.1
  Layered abstraction for
  filtering orders by status,
  date range, and keyword search
end note

note right of LowStockAlertService
  CP4 Feature 2.2
  Pub-Sub subscriber that monitors
  inventory and publishes alerts
  when stock < threshold (default: 5)
end note

note right of NotificationService
  CP4 Feature 2.3
  In-memory notification store
  triggered by RMA status changes
  via Pub-Sub pattern
end note

note right of PartnerCatalogService
  CP2: Partner (VAR) Catalog Ingest
  - Ingest CSV/JSON feeds (ADR 9)
  - Validate input (ADR 7: S.2)
  - Authenticate API keys (ADR 6: S.1)
  - Upsert products to catalog
  - Periodic scheduled sync
  - Publish-Subscribe events (ADR 16)
end note

note right of CSVDataAdapter
  Adapter Pattern (ADR 9: M.1)
  Transforms external formats
  to internal data model
end note

@enduml
